This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
3/1/24: Fixed setting reoported values from plugin functions with 1 or 2
returned doubles (In 4.1).

2/29/24: Split the View/Search defocus and shift offset controls into two rows
and added Auto buttons to find the shift offsets automatically.

2/29/24: Fixed some log output coming out the wrong color or even when output
is deferred.

2/29/24: Allowed SetItemAcquire to turn off Acquire for item in range being
acquired, and added argument to SkipAcquiringNavItem to turn off its Acquire.

2/29/24: Fixed double counting item skipped in main script as done (In 4.1).

2/28/24: Fixed assignment to variables on ReportNavItem line (In 4.1).

2/28/24:  SEM_4-2-0beta3
2/28/24: Prevented some unneeded updates when using SuspendNavUpdate and
stopped getting stage position from scope when adding points marked on buffer;
fixed a crash using that with collapsed groups (In 4.1).

2/28/24: Fixed setting variables on command line for ReportCurrentBuffer and
ReportActiveViewTitle (In 4.1).

2/27/24: SEM_4-1-6
2/27/24: Fixed initial angle set from lines in high-focus mag calibration to
omit adjustments for high focus (In 4.1).

2/27/24: Added script command to set variables for many scope state values
without a call to the scope.

2/27/24: Fixed display of beam and focus increments in Scope Control panel.

2/24/24: Fixed debug output from threads not coming out gray.

2/23/24: Made FEI scope plugin and server adjust the exposure time to get the
expected number of EER frames even if camera timing hasn't been tuned; made
camera dialog show true dose including frames lost for CDS in counting mode;
put the exposure time and dose including these lost frames in the mdoc file
(In 4.1).
